<resources>
    <string name="app_name">Shopping App</string>
    <string name="title_activity_last_screen">LastScreen</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="your_order_s_are">Your Order\'s Are-</string>
    <string name="refurbished">Refurbished</string>
    <string name="cpu">CPU</string>
    <string name="intel_i5_7300hq">Intel i5-7300HQ</string>
    <string name="ram">RAM</string>
    <string name="_8gb_ddr4">8GB DDR4</string>
    <string name="storage">Storage</string>
    <string name="_1tb_hdd">1TB HDD</string>
    <string name="graphic">Graphic</string>
    <string name="nvidia_gtx_1660_max_q_intel_hd_graphics_520">Nvidia GTX 1660 Max-Q Intel HD Graphics 520</string>
    <string name="add_to_cart">Add To Cart</string>
</resources>