<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".LastScreen"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#F1F0F0"
    >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:id="@+id/linearLayout5"
        android:padding="@dimen/small"
        android:background="@color/white"
        >
        <ImageView
            android:id="@+id/goBack"
            android:layout_width="35dp"
            android:layout_height="45dp"
            android:src="@drawable/left"
            android:paddingLeft="@dimen/small"
            android:onClick="returntoactivity"
             />
        <View
            android:layout_width="230dp"
            android:layout_height="45dp"/>
        <ImageView
            android:id="@+id/logout"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:layout_marginEnd="12dp"
            android:onClick="logout"
            android:src="@drawable/logoutb"
            app:layout_constraintEnd_toStartOf="@+id/bag"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/bag"
            android:layout_width="60dp"
            android:layout_height="45dp"
            android:src="@drawable/shoppingbag"
            android:onClick="viewOrders"
            />
    </LinearLayout>
    <ImageView
        android:id="@+id/tick"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="invisible"
        android:layout_below="@id/viewPager3"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/animated_check" />
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager3"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="1dp"
        android:layout_below="@+id/linearLayout5"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:scaleType="centerCrop"
        android:background="@color/white"/>

    <TextView
        android:id="@+id/descriptionbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/linearLayout"
            android:paddingLeft="@dimen/small"

            android:text="Description"
            android:textColor="@color/textColor"
            android:textSize="20sp"
        android:layout_above="@+id/linearLayout"
        />

    <RelativeLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewPager3"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
             <TextView
                 android:id="@+id/companyname"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Asus"
                 android:textColor="@color/darkgrey"
                 android:paddingLeft="@dimen/small"
                 android:textSize="16sp"
                 />
            <TextView
                android:id="@+id/laptopname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Zephrus Gaming Laptop"
                android:textColor="@color/textColor"
                android:paddingLeft="@dimen/small"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="K 1,600,000"
                android:textColor="@color/blue"
                android:paddingLeft="@dimen/small"
                android:textSize="18sp" />
        </LinearLayout>
        <ImageView
            android:id="@+id/heart"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/heartorangecircle"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/small" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_above="@+id/descriptionbox"
        android:layout_below="@+id/linearLayout6"
        android:padding="@dimen/small"
        android:adjustViewBounds="true"
        android:gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="Condition"
            android:textColor="@color/darkgrey"
            android:paddingLeft="@dimen/small"
            android:textSize="18sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refurbished"
            android:textColor="@color/textColor"
            android:paddingLeft="140dp"
            android:textSize="18sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/small">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/small"
            android:text="@string/cpu"
            android:textColor="@color/darkgrey"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intel_i5_7300hq"
            android:textColor="@color/textColor"
            android:paddingLeft="140dp"
            android:textSize="18sp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/small">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/ram"
            android:textColor="@color/darkgrey"
            android:paddingLeft="@dimen/small"
            android:textSize="18sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="140dp"
            android:text="@string/_8gb_ddr4"
            android:textColor="@color/textColor"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/small">
        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:text="@string/storage"
            android:textColor="@color/darkgrey"
            android:paddingLeft="@dimen/small"
            android:textSize="18sp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="140dp"
            android:text="@string/_1tb_hdd"
            android:textColor="@color/textColor"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/small">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/small"
            android:text="@string/graphic"
            android:textColor="@color/darkgrey"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nvidia_gtx_1660_max_q_intel_hd_graphics_520"
            android:textColor="@color/textColor"
            android:paddingLeft="140dp"
            android:textSize="15sp"
            />
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="25dp"
        android:paddingBottom="@dimen/small"
        android:paddingLeft="@dimen/small"
        android:layout_alignParentBottom="true" >

        <Button
            android:background="@drawable/share"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            android:paddingLeft="8dp"
            android:onClick="Tick"/>
        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:background="#2A799A"
            android:gravity="center"
            android:text="@string/add_to_cart"
            android:onClick="Tick"/>

    </LinearLayout>
</RelativeLayout>